--- a/Testing.ipynb
+++ b/Testing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -14,133 +14,80 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "717.68\n",
-      "656.68\n",
-      "Moviepy - Building video ..\\test_data\\videos\\20230105.mp4.\n",
-      "MoviePy - Writing audio in 20230105TEMP_MPY_wvf_snd.mp3\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                        \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "MoviePy - Done.\n",
-      "Moviepy - Writing video ..\\test_data\\videos\\20230105.mp4\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                   "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Moviepy - Done !\n",
-      "Moviepy - video ready ..\\test_data\\videos\\20230105.mp4\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r"
+      "Old sampling rate: 44100\n",
+      "Resampling 20230111.wav\n",
+      "New sampling rate: 16000\n"
      ]
     }
    ],
    "source": [
-    "from moviepy.editor import VideoFileClip\n",
-    "import ffmpeg\n",
+    "import librosa\n",
     "import os\n",
-    "import math\n",
+    "import soundfile as sf\n",
     "\n",
-    "start=61\n",
-    "end=None\n",
-    "raw_video_path=r'..\\test_data\\raw_videos\\20230105.mp4'\n",
-    "video_path=r'..\\test_data\\videos\\20230105.mp4'\n",
-    "raw_audio_path=r'..\\test_data\\raw_audios\\20230105.wav'\n",
     "\n",
-    "raw_video = VideoFileClip(raw_video_path)\n",
-    "if end is None:\n",
-    "    end = raw_video.duration   # Get video's length\n",
-    "print(end)\n",
-    "# end = math.floor(end)\n",
-    "# print(end)\n",
-    "video = raw_video.subclip(start, end)\n",
-    "print(video.duration)\n",
-    "video.write_videofile(video_path, fps=raw_video.fps, codec='mpeg4')\n",
+    "def resampling(audio_name,\n",
+    "               raw_audio_path,\n",
+    "               audio_path,\n",
+    "               target_sampling_rate=16000,\n",
+    "               res_type=\"kaiser_best\") -> None:\n",
+    "    '''\n",
+    "        Resample audio at a desired sampling rate\n",
     "\n",
-    "                \n"
+    "        Parameters:\n",
+    "            target_sampling_rate: int (default=16000)\n",
+    "                Desired sampling rate\n",
+    "            res_type: str (default='kasier_best)\n",
+    "                Resampling type\n",
+    "    '''\n",
+    "    speech_array, sampling_rate = sf.read(raw_audio_path)\n",
+    "    print(f'Old sampling rate: {sampling_rate}')\n",
+    "    if len(speech_array.shape) == 2:\n",
+    "        speech_array = speech_array[..., 0]\n",
+    "    if sampling_rate != target_sampling_rate:\n",
+    "        print(f'Resampling {audio_name}')\n",
+    "        speech_array = librosa.resample(\n",
+    "            speech_array,\n",
+    "            orig_sr=sampling_rate, target_sr=target_sampling_rate,\n",
+    "            res_type=res_type\n",
+    "        )\n",
+    "    sf.write(audio_path, speech_array, samplerate=target_sampling_rate)\n",
+    "\n",
+    "\n",
+    "audio_name = '20230111.wav'\n",
+    "raw_audio_path = os.path.join(r'..\\data\\raw_audios', audio_name)\n",
+    "audio_path = os.path.join(r'..\\data\\audios', audio_name)\n",
+    "resampling(audio_name, raw_audio_path, audio_path)\n",
+    "\n",
+    "_, sampling_rate = sf.read(audio_path)\n",
+    "print(f'New sampling rate: {sampling_rate}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "595.045000\n"
-     ]
-    },
-    {
-     "ename": "Error",
-     "evalue": "ffmpeg error (see stderr output for detail)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mError\u001b[0m                                     Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [1], line 24\u001b[0m\n\u001b[0;32m     18\u001b[0m audio \u001b[39m=\u001b[39m (input_stream\n\u001b[0;32m     19\u001b[0m             \u001b[39m.\u001b[39mfilter_(\u001b[39m'\u001b[39m\u001b[39matrim\u001b[39m\u001b[39m'\u001b[39m, start\u001b[39m=\u001b[39mstart, end\u001b[39m=\u001b[39mend)\n\u001b[0;32m     20\u001b[0m             \u001b[39m.\u001b[39mfilter_(\u001b[39m'\u001b[39m\u001b[39masetpts\u001b[39m\u001b[39m'\u001b[39m, pts))\n\u001b[0;32m     21\u001b[0m video_output \u001b[39m=\u001b[39m ffmpeg\u001b[39m.\u001b[39moutput(ffmpeg\u001b[39m.\u001b[39mconcat(video, audio),\n\u001b[0;32m     22\u001b[0m                                 video_path,\n\u001b[0;32m     23\u001b[0m                                 \u001b[39mformat\u001b[39m\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mmp4\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m---> 24\u001b[0m video_output\u001b[39m.\u001b[39;49mrun()\n\u001b[0;32m     25\u001b[0m \u001b[39m# Extract audio\u001b[39;00m\n\u001b[0;32m     26\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m os\u001b[39m.\u001b[39mpath\u001b[39m.\u001b[39misfile(raw_audio_path):\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\ffmpeg\\_run.py:325\u001b[0m, in \u001b[0;36mrun\u001b[1;34m(stream_spec, cmd, capture_stdout, capture_stderr, input, quiet, overwrite_output)\u001b[0m\n\u001b[0;32m    323\u001b[0m retcode \u001b[39m=\u001b[39m process\u001b[39m.\u001b[39mpoll()\n\u001b[0;32m    324\u001b[0m \u001b[39mif\u001b[39;00m retcode:\n\u001b[1;32m--> 325\u001b[0m     \u001b[39mraise\u001b[39;00m Error(\u001b[39m'\u001b[39m\u001b[39mffmpeg\u001b[39m\u001b[39m'\u001b[39m, out, err)\n\u001b[0;32m    326\u001b[0m \u001b[39mreturn\u001b[39;00m out, err\n",
-      "\u001b[1;31mError\u001b[0m: ffmpeg error (see stderr output for detail)"
+      "Wrong-sampled audios:\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "import ffmpeg\n",
-    "\n",
-    "start=61\n",
-    "end=None\n",
-    "raw_video_path=r'..\\test_data\\raw_videos\\20230105.mp4'\n",
-    "video_path=r'..\\test_data\\raw_videos\\20230105.mp4'\n",
-    "raw_audio_path=r'..\\test_data\\raw_audios\\20230105.wav'\n",
-    "\n",
-    "input_stream = ffmpeg.input(raw_video_path)\n",
-    "pts = 'PTS-STARTPTS'\n",
-    "if end is None:\n",
-    "    end = (ffmpeg\n",
-    "            .probe(raw_video_path)\n",
-    "            .get('format', {})\n",
-    "            .get('duration'))    # Get video's length\n",
-    "print(end)\n",
-    "video = input_stream.trim(start=start, end=end).setpts(pts)\n",
-    "audio = (input_stream\n",
-    "            .filter_('atrim', start=start, end=end)\n",
-    "            .filter_('asetpts', pts))\n",
-    "video_output = ffmpeg.output(ffmpeg.concat(video, audio),\n",
-    "                                video_path,\n",
-    "                                format='mp4')\n",
-    "video_output.run()\n",
-    "# Extract audio\n",
-    "if not os.path.isfile(raw_audio_path):\n",
-    "    print('Extracting audio')\n",
-    "    raw_audio_output = ffmpeg.output(audio,\n",
-    "                                        raw_audio_path,\n",
-    "                                        format='wav')\n",
-    "    raw_audio_output.run()"
+    "# Check sampling rate\n",
+    "audios_path = r'..\\data\\audios'\n",
+    "wrong_sampled = []\n",
+    "for audio_name in os.listdir(audios_path):\n",
+    "    audio_path = os.path.join(audios_path, audio_name)\n",
+    "    _, sampling_rate = sf.read(audio_path)\n",
+    "    if sampling_rate != 16000:\n",
+    "        wrong_sampled.append(audio_name)\n",
+    "print('Wrong-sampled audios:')\n",
+    "print(*wrong_sampled, sep='\\n')"
    ]
   }
  ],
@@ -164,7 +111,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.13 (tags/v3.9.13:6de2ca5, May 17 2022, 16:36:42) [MSC v.1929 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
