--- a/data/test.ipynb
+++ b/data/test.ipynb
@@ -340,18 +340,11 @@
     "            f.write(f'{df[\"word\"].values[i]}\\n\\n')\n",
     "convert_to_srt('test7.csv')\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "torch",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -365,12 +358,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.13 (tags/v3.9.13:6de2ca5, May 17 2022, 16:36:42) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "ad622261ae95de60e6c96049fca3491b86b06fbc6d42f9ff005be079e3e9e205"
+    "hash": "231b793e72510f63263cf75731d759da8776d8c74c3ed2dbefa0f0827e58fa6e"
    }
   }
  },
