Building argument parser

--- a/data/test.ipynb
+++ b/data/test.ipynb
@@ -340,6 +340,358 @@
     "            f.write(f'{df[\"word\"].values[i]}\\n\\n')\n",
     "convert_to_srt('test7.csv')\n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Count words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1683\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "transcripts = r'..\\..\\data\\transcripts'\n",
+    "word_dict = dict()\n",
+    "trans_lst = os.listdir(transcripts)\n",
+    "for i in range(28):\n",
+    "    transcript_path = os.path.join(transcripts, trans_lst[i])\n",
+    "    with open(transcript_path, 'r', encoding='utf-8') as f:\n",
+    "        words = f.read().split()\n",
+    "        for word in words:\n",
+    "            word_dict[word] = word_dict.get(word, 0) + 1\n",
+    "df = pd.DataFrame(columns=['word', 'count'])\n",
+    "for word, count in word_dict.items():\n",
+    "    new_word = pd.DataFrame({'word': [word],\n",
+    "                             'count': [count]})\n",
+    "    df = pd.concat([df, new_word], ignore_index=True)\n",
+    "sorted_df = df.sort_values(by=['count'], ascending=False)\n",
+    "sorted_df.to_csv('stat.csv', index=False)\n",
+    "print(len(sorted_df))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Transcribing and aligning 20230114.wav\n",
+      "Save transcript to file:  ..\\..\\test_data\\transcripts\\20230114.txt\n",
+      "Save transcript to file:  ..\\..\\test_data\\csv_transcripts\\20230114.csv\n",
+      "Converting 20230114.csv to 20230114.srt\n"
+     ]
+    }
+   ],
+   "source": [
+    "from speech_to_text import SpeechToText\n",
+    "import os\n",
+    "\n",
+    "\n",
+    "def transcribe_and_align(speech2text,\n",
+    "                         video_name,\n",
+    "                         audios_path,\n",
+    "                         transcripts_path,\n",
+    "                         csv_transcripts_path):\n",
+    "    '''\n",
+    "        Transcribe the audio and align each word to the speech\n",
+    "    '''\n",
+    "    audio_name = video_name.replace('mp4', 'wav')\n",
+    "    audio_path = os.path.join(audios_path, audio_name)\n",
+    "    transcript_path = os.path.join(transcripts_path,\n",
+    "                                   video_name.replace('mp4', 'txt'))\n",
+    "    csv_transcript_path = os.path.join(\n",
+    "        csv_transcripts_path,\n",
+    "        video_name.replace('mp4', 'csv')\n",
+    "    )\n",
+    "\n",
+    "    if not os.path.isfile(csv_transcript_path):\n",
+    "        print(f'Transcribing and aligning {audio_name}')\n",
+    "        speech2text.save_result_to_file(audio_path,\n",
+    "                                        transcript_path,\n",
+    "                                        csv_transcript_path)\n",
+    "\n",
+    "\n",
+    "def convert_to_srt(video_name,\n",
+    "                   transcripts_path,\n",
+    "                   csv_transcripts_path,\n",
+    "                   srt_transcripts_path):\n",
+    "    '''\n",
+    "        Convert csv file to srt file\n",
+    "    '''\n",
+    "\n",
+    "    def sec_to_timecode(x: float) -> str:\n",
+    "        '''\n",
+    "            Calculate timecode from second\n",
+    "\n",
+    "            Parameters:\n",
+    "                x: float\n",
+    "                    Second\n",
+    "        '''\n",
+    "        hour, x = divmod(x, 3600)\n",
+    "        minute, x = divmod(x, 60)\n",
+    "        second, x = divmod(x, 1)\n",
+    "        millisecond = int(x * 1000.)\n",
+    "        return '%.2d:%.2d:%.2d,%.3d' % (hour, minute, second, millisecond)\n",
+    "\n",
+    "    csv_name = video_name.replace('mp4', 'csv')\n",
+    "    csv_path = os.path.join(\n",
+    "        csv_transcripts_path,\n",
+    "        csv_name\n",
+    "    )\n",
+    "    srt_name = video_name.replace('mp4', 'srt')\n",
+    "    srt_path = os.path.join(\n",
+    "        srt_transcripts_path,\n",
+    "        srt_name\n",
+    "    )\n",
+    "\n",
+    "    if not os.path.isfile(srt_path):\n",
+    "        df = pd.read_csv(csv_path)\n",
+    "\n",
+    "        print(f'Converting {csv_name} to {srt_name}')\n",
+    "        with open(srt_path, 'w', encoding='utf-8') as f:\n",
+    "            for i in range(len(df)):\n",
+    "                start = df[\"start\"].values[i]\n",
+    "                end = df[\"end\"].values[i]\n",
+    "                word = df[\"word\"].values[i]\n",
+    "                f.write(f'{i+1}\\n')\n",
+    "                f.write(\n",
+    "                    f'{sec_to_timecode(start)} --> {sec_to_timecode(end)}\\n')\n",
+    "                f.write(f'{word}\\n\\n')\n",
+    "\n",
+    "\n",
+    "video_name = r'20230114.mp4'\n",
+    "audios_path = r'..\\..\\test_data\\audios'\n",
+    "transcripts_path = r'..\\..\\test_data\\transcripts'\n",
+    "csv_transcripts_path = r'..\\..\\test_data\\csv_transcripts'\n",
+    "srt_transcripts_path = r'..\\..\\test_data\\srt_transcripts'\n",
+    "speech2text = SpeechToText()\n",
+    "\n",
+    "transcribe_and_align(speech2text, video_name, audios_path,\n",
+    "                     transcripts_path, csv_transcripts_path)\n",
+    "convert_to_srt(video_name, transcripts_path,\n",
+    "               csv_transcripts_path, srt_transcripts_path)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Trim silience"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ffmpeg\n",
+    "import pandas as pd\n",
+    "\n",
+    "def trim_and_extract_audio(raw_videos_path,\n",
+    "                           video_name,\n",
+    "                           videos_path,\n",
+    "                           audios_path,\n",
+    "                           start=60, end=None) -> None:\n",
+    "    '''\n",
+    "        Trim a part of the video and then extract audio\n",
+    "\n",
+    "        Parameters:\n",
+    "            start: float\n",
+    "                where to begin trimming\n",
+    "            end: float\n",
+    "                where to end trimming\n",
+    "    '''\n",
+    "    raw_video_path = os.path.join(raw_videos_path, video_name)\n",
+    "    video_path = os.path.join(videos_path, video_name)\n",
+    "    audio_path = os.path.join(audios_path,\n",
+    "                                video_name.replace('mp4', 'wav'))\n",
+    "    video_stream, audio_stream = __get_video_stream(\n",
+    "        raw_video_path, start, end)\n",
+    "    # Trim first minute of the video\n",
+    "    if not os.path.isfile(video_path):\n",
+    "        print(f'Trimming {video_name}')\n",
+    "        video_output = ffmpeg.output(ffmpeg.concat(video_stream,\n",
+    "                                                    audio_stream,\n",
+    "                                                    v=1, a=1),\n",
+    "                                        video_path,\n",
+    "                                        format='mp4')\n",
+    "        video_output.run()\n",
+    "    # Extract audio\n",
+    "    if not os.path.isfile(audio_path):\n",
+    "        print(f'Extracting audio from {video_name}')\n",
+    "        audio_output = ffmpeg.output(audio_stream,\n",
+    "                                        audio_path,\n",
+    "                                        format='wav')\n",
+    "        audio_output.run()\n",
+    "\n",
+    "def __get_video_stream(raw_video_path: str, start, end) -> tuple:\n",
+    "    '''\n",
+    "        Get video stream and audio stream\n",
+    "\n",
+    "        Parameters:\n",
+    "            raw_video_path: str\n",
+    "                Path to video\n",
+    "            start: float\n",
+    "                Second in video to start streaming\n",
+    "            end: float\n",
+    "                Second in video to end streaming\n",
+    "    '''\n",
+    "    input_stream = ffmpeg.input(raw_video_path)\n",
+    "    pts = 'PTS-STARTPTS'\n",
+    "    if end is None:\n",
+    "        end = (ffmpeg\n",
+    "                .probe(raw_video_path)\n",
+    "                .get('format', {})\n",
+    "                .get('duration'))    # Get video's length\n",
+    "    video = (input_stream\n",
+    "                .trim(start=start, end=end)\n",
+    "                .filter('setpts', pts))\n",
+    "    audio = (input_stream\n",
+    "                .filter('atrim', start=start, end=end)\n",
+    "                .filter('asetpts', pts))\n",
+    "    return video, audio\n",
+    "\n",
+    "def transcribe_and_align(speech2text, video_name, audios_path, transcripts_path, csv_transcripts_path):\n",
+    "    '''\n",
+    "        Transcribe the audio and align each word to the speech\n",
+    "    '''\n",
+    "    audio_name = video_name.replace('mp4', 'wav')\n",
+    "    audio_path = os.path.join(audios_path, audio_name)\n",
+    "    transcript_path = os.path.join(transcripts_path,\n",
+    "                                    video_name.replace('mp4', 'txt'))\n",
+    "    csv_transcript_path = os.path.join(\n",
+    "        csv_transcripts_path,\n",
+    "        video_name.replace('mp4', 'csv')\n",
+    "    )\n",
+    "\n",
+    "    if not os.path.isfile(csv_transcript_path):\n",
+    "        print(f'Transcribing and aligning {audio_name}')\n",
+    "        speech2text.save_result_to_file(audio_path,\n",
+    "                                                transcript_path,\n",
+    "                                                csv_transcript_path)\n",
+    "\n",
+    "def convert_to_srt(video_name, csv_transcripts_path, srt_transcripts_path):\n",
+    "    '''\n",
+    "        Convert csv file to srt file\n",
+    "    '''\n",
+    "\n",
+    "    def sec_to_timecode(x: float) -> str:\n",
+    "        '''\n",
+    "            Calculate timecode from second\n",
+    "\n",
+    "            Parameters:\n",
+    "                x: float\n",
+    "                    Second\n",
+    "        '''\n",
+    "        hour, x = divmod(x, 3600)\n",
+    "        minute, x = divmod(x, 60)\n",
+    "        second, x = divmod(x, 1)\n",
+    "        millisecond = int(x * 1000.)\n",
+    "        return '%.2d:%.2d:%.2d,%.3d' % (hour, minute, second, millisecond)\n",
+    "\n",
+    "    csv_name = video_name.replace('mp4', 'csv')\n",
+    "    csv_path = os.path.join(\n",
+    "        csv_transcripts_path,\n",
+    "        csv_name\n",
+    "    )\n",
+    "    srt_name = video_name.replace('mp4', 'srt')\n",
+    "    srt_path = os.path.join(\n",
+    "        srt_transcripts_path,\n",
+    "        srt_name\n",
+    "    )\n",
+    "\n",
+    "    if not os.path.isfile(srt_path):\n",
+    "        df = pd.read_csv(csv_path)\n",
+    "\n",
+    "        print(f'Converting {csv_name} to {srt_name}')\n",
+    "        with open(srt_path, 'w', encoding='utf-8') as f:\n",
+    "            for i in range(len(df)):\n",
+    "                start = df[\"start\"].values[i]\n",
+    "                end = df[\"end\"].values[i]\n",
+    "                word = df[\"word\"].values[i]\n",
+    "                f.write(f'{i+1}\\n')\n",
+    "                f.write(\n",
+    "                    f'{sec_to_timecode(start)} --> {sec_to_timecode(end)}\\n')\n",
+    "                f.write(f'{word}\\n\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Transcribing and aligning no_silent_moment_nottrim.wav\n",
+      "Save transcript to file:  ..\\..\\test_data\\transcripts\\no_silent_moment_nottrim.txt\n",
+      "Save transcript to file:  ..\\..\\test_data\\csv_transcripts\\no_silent_moment_nottrim.csv\n",
+      "Converting no_silent_moment_nottrim.csv to no_silent_moment_nottrim.srt\n"
+     ]
+    }
+   ],
+   "source": [
+    "from speech_to_text import SpeechToText\n",
+    "\n",
+    "video_name = r'no_silent_moment_nottrim.mp4'\n",
+    "raw_videos_path = r'..\\..\\test_data\\raw_videos'\n",
+    "videos_path = r'..\\..\\test_data\\videos'\n",
+    "audios_path = r'..\\..\\test_data\\audios'\n",
+    "transcripts_path = r'..\\..\\test_data\\transcripts'\n",
+    "csv_transcripts_path = r'..\\..\\test_data\\csv_transcripts'\n",
+    "srt_transcripts_path = r'..\\..\\test_data\\srt_transcripts'\n",
+    "speech2text = SpeechToText()\n",
+    "\n",
+    "trim_and_extract_audio(raw_videos_path, video_name, videos_path, audios_path)\n",
+    "transcribe_and_align(speech2text, video_name, audios_path, transcripts_path, csv_transcripts_path)\n",
+    "convert_to_srt(video_name, csv_transcripts_path, srt_transcripts_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "srt_name = '20230113.srt'\n",
+    "with open(srt_name, 'r', encoding='utf-8') as f:\n",
+    "    print(f.read())"
+   ]
   }
  ],
  "metadata": {
@@ -363,7 +715,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "231b793e72510f63263cf75731d759da8776d8c74c3ed2dbefa0f0827e58fa6e"
+    "hash": "8a5edab282632443219e051e4ade2d1d5bbc671c781051bf1437897cbdfea0f1"
    }
   }
  },
